[package]
name = "finutils"
version = "0.2.11"
authors = ["FindoraNetwork"]
build = "build.rs"
edition = "2021"

[dependencies]
hex = "0.4.2"
base64 = "0.12"
lazy_static = "1.4.0"
attohttpc = { version = "0.23", default-features = false, features = ["compress", "json", "tls-rustls"] }
serde_json = "1.0.40"
serde = { version = "1.0.124", features = ["derive"] }
rand = "0.8"
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand_chacha = "0.2"
curve25519-dalek = { version = "3.0", features = ["serde"] }
sha2 = "0.10"

zei = { git = "https://github.com/FindoraNetwork/zei", branch = "stable-main" }
ruc = "1.0"
nix = "0.25"

ledger = { path = "../src/ledger" }
globutils = { path = "../globutils" }
credentials = { path = "../credentials" }

fp-core = { path = "../src/components/contracts/primitives/core", default-features = false }
fp-utils = { path = "../src/components/contracts/primitives/utils" }
fp-types = { path = "../src/components/contracts/primitives/types" }

tendermint = { git = "https://github.com/FindoraNetwork/tendermint-rs", tag = "v0.19.0a-fk" }

[build-dependencies]
vergen = "=3.1.0"

[features]
default = []
